package org.example.e_builder;

public class HighBuildingHouse extends AbstractHouse {
    public void buildBasic() {
        System.out.println(" 高楼打地基 ");

    }

    public void buildWalls() {
        System.out.println(" 高楼砌墙 ");

    }

    public void roofed() {
        System.out.println(" 高楼封顶 ");

    }
}
