@startuml
'https://plantuml.com/class-diagram


abstract class AbstractHouse{
    buildBasic():void
    buildWalls():void
    roofed():void
    build():void
}
class CommonHouse
class HighBuildingHouse
AbstractHouse <|--	CommonHouse
AbstractHouse <|--  HighBuildingHouse
Client..> HighBuildingHouse
Client ..> CommonHouse

class Client

@enduml